refactored to java 21 and spring boot 3.4 and pi4j 3